<resources>
    <string name="app_name">Anime Center</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="ads_banner">ca-app-pub-4928950783655706~2696052234</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="Full_name">Full Name</string>
    <string name="user_name">User Name</string>
    <string name="Gender">Gender</string>
    <string name="Male">Male</string>
    <string name="female">Female</string>
    <string name="welcome">Welcome to The Anime Center</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="email_id">Email ID</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="back">Back</string>
    <string name="string_about">We offer you a list of the most famous months in the world to get to know them in the form of raik and love with the inclusion of anime recipes and make improvements suitable for the user enjoy</string>
    <string name="ads_Interstitials">ca-app-pub-4928950783655706~2696052234</string>
    <string name="anime_title">Anime Title</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="Studio">Studio</string>
    <string name="dashboared">Dashboared</string>
    <string name="GroupImage">Group Anime</string>
    <string name="share">Share using</string>
    <string name="get_App">get App Anime Center</string>
    <string name="get_Anime">Anime Center app you can get now on link https://play.google.com/store</string>
    <string name="get_click_share">you click on menu share</string>
</resources>
